--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
-    "express": "^4.19.1",
+    "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.11.30",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
